--- a/app/views/networks/show.html.haml
+++ b/app/views/networks/show.html.haml
@@ -1,14 +1,16 @@
-%h2="Showing #{@network.name}"
+%h2="#{@network.name}"
 
 %table
   %tr
     %th Name
     %th
     %th
+    %th
   %tr
     %td= "#{@network.name}"
+    %td= link_to 'View Shows', network_shows_path(@network)
     %td= link_to 'Edit', edit_network_path(@network)
-    %td= link_to "Delete", network_path(@network), method: :delete, confirm: "Are you sure you want to ba-lete this?"
+    %td= link_to 'Delete', network_path(@network), method: :delete, confirm: "Are you sure you want to ba-lete this? Srsly, it will delete all of the things in this network."
 
 
 %p= link_to 'Back', networks_path
