--- a/app/views/networks/_form.html.haml
+++ b/app/views/networks/_form.html.haml
@@ -2,6 +2,10 @@
   %p
     = f.label :name
     = f.text_field :name
+
+  %p
+    = f.label :description
+    = f.text_field :description
   
   %p
     = f.submit
