Refactor networks controller.
- use local instead of instance variable to foster good delegation habits
- explicit (if un-DRY) render calls for each action
- permit a :description key to be assigned in params
- display descriptions in :index an :show views
- use a resource-based form_for instead of an action-based one
- display error messages in the form when required fields are missing

--- a/app/views/networks/edit.html.haml
+++ b/app/views/networks/edit.html.haml
@@ -1,6 +1,7 @@
-%h2= "Editing #{@network.name}"
+%h2= "Editing #{network.name}"
 
-= render partial: 'form'
+%p pssst
+= render partial: 'form', locals: { network: network }
 
-%p= link_to 'Add Show', new_network_show_path(@network)
-%p= link_to 'Back', network_path(@network)
+%p= link_to 'Add Show', new_network_show_path(network)
+%p= link_to 'Back', network_path(network)
