--- a/app/views/networks/_form.html.haml
+++ b/app/views/networks/_form.html.haml
@@ -1,4 +1,8 @@
-= form_for :network, url: networks_path, method: :post do |f|
+= form_for network do |f|
+  %p.errors
+    - network.errors.full_messages.each do |message|
+      %p.error= message
+
   %p
     = f.label :name
     = f.text_field :name
