--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
-    = flash[:notice]
-    = flash[:warning]
+    .flashes
+      = flash[:notice]
+      = flash[:warning]
     = yield
