--- a/app/views/networks/edit.html.haml
+++ b/app/views/networks/edit.html.haml
@@ -1,7 +1,6 @@
-%h2= "Editing #{network.name}"
+%h2 Editing #{network.name}
 
-%p pssst
-= render partial: 'form', locals: { network: network }
+= render 'form', network: network
 
 %p= link_to 'Add Show', new_network_show_path(network)
 %p= link_to 'Back', network_path(network)
