--- a/app/views/networks/index.html.haml
+++ b/app/views/networks/index.html.haml
@@ -3,8 +3,8 @@
 %table
   %tr
     %th Name
-    %th Shows
-    %th Descriptions
+    %th Description
+    %th # of Shows
     %th
   - networks.each do |network|
     %tr
