--- a/app/views/networks/new.html.haml
+++ b/app/views/networks/new.html.haml
@@ -1,5 +1,5 @@
 %h2 Add Network
 
-= render partial: 'form', locals: { network: network }
+= render 'form', network: network
 
 %p= link_to 'Back', networks_path
