--- a/app/views/shows/_form.html.haml
+++ b/app/views/shows/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for @show, url: network_shows_path(@network, @show), method: :post do |f|
-  - if @show.errors.any?
+= form_for [network, show] do |f|
+  - if show.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@show.errors.count, "error")} prohibited this show from being saved:"
+      %h2= "#{pluralize(show.errors.count, "error")} prohibited this show from being saved:"
       %ul
-        - @show.errors.full_messages.each do |msg|
+        - show.errors.full_messages.each do |msg|
           %li= msg
           
   %p         
