--- a/app/views/episodes/index.html.haml
+++ b/app/views/episodes/index.html.haml
@@ -1,6 +1,6 @@
-%h1 Listing shows
+%h1 Listing episodes
 
-- if @shows.any?
+- if episodes.any?
   %table
     %tr
       %th Name
@@ -8,14 +8,14 @@
       %th
       %th
 
-    - @shows.each do |show|
+    - episodes.each do |episode|
       %tr
-        %td= link_to "#{show.name}", network_show_path(@network, show)
-        %td="#{show.description}"
-        %td= link_to 'Edit', edit_network_show_path(@network, show)
-        %td= link_to 'Destroy', network_show_path(@network, show), :method => :delete, :data => { :confirm => 'Are you sure you want to ba-lete this?' }
+        %td= link_to "#{episode.name}", [show, episode]
+        %td="#{episode.description}"
+        %td= link_to 'Edit', edit_show_episode_path(show, episode)
+        %td= link_to 'Destroy', [show, episode], method: :delete, data: { confirm: 'Are you sure you want to ba-lete this?' }
 - else
-  %p You don't got no shows! 
+  %p You don't got no episodes! 
 
-%p= link_to 'Add a Show', new_network_show_path(@network)
-%p= link_to 'Back', network_path(@network)
+%p= link_to 'Add an episode', new_show_episode_path(show)
+%p= link_to 'Back to #{show}', show
