--- a/app/views/episodes/new.html.haml
+++ b/app/views/episodes/new.html.haml
@@ -1,5 +1,5 @@
-%h1= "New show for #{@network.name}"
+%h1= "New show for #{show.name}"
 
-= render 'form'
+= render 'form', show: show, episode: episode
 
-= link_to 'Cancel', edit_network_path(@network)
+= link_to "Back to #{show.name}", show
