--- a/app/views/episodes/show.html.haml
+++ b/app/views/episodes/show.html.haml
@@ -1,20 +1,11 @@
-%h2="Showing #{@show.name}"
+%h2 #{episode.title}
 
-%p#notice= notice
+%h3 Description
+%p= episode.description
+    
+%h3 Guests
 
-%table
-  %tr
-    %th Network
-    %th Name
-    %th Description
-    %th 
-    %th
+%p= link_to 'Edit', edit_show_episode_path(episode.show, episode)
+%p= link_to 'Delete', [episode.show, episode], method: :delete, confirm: "Are you sure you want to ba-lete this?"
 
-  %tr
-    %td="#{@network.name}"
-    %td="#{@show.name}"
-    %td="#{@show.description}"
-    %td= link_to 'Edit', edit_network_show_path(@network, @show)
-    %td= link_to 'Delete', network_show_path(@network, @show), method: :delete, confirm: "Are you sure you want to ba-lete this?"
-
-= link_to 'Back', network_shows_path(@network)
+%p= link_to "Back to #{episode.show.name}", episode.show
