--- a/app/views/topics/edit.html.haml
+++ b/app/views/topics/edit.html.haml
@@ -1,5 +1,5 @@
-%h2 Add Guest 
+%h1 Editing topic
 
-= render 'form', episode: episode, guest: guest
+= render 'form', episode: episode, topic: topic
 
 %p= link_to "Back to #{episode.title}", show_episode_path(episode.show, episode)
