--- a/app/views/guests/index.html.haml
+++ b/app/views/guests/index.html.haml
@@ -10,4 +10,4 @@
       %td= link_to 'Edit', edit_episode_guest_path(guest.episode, guest)
       %td= link_to "Delete", [guest.episode, guest], method: :delete, confirm: "Are you sure you want to ba-lete this?"
 
-%p= link_to 'Add Host', new_episode_guest_path(episode)
+%p= link_to 'Add Guest', new_episode_guest_path(episode)
