Add taping resource, controller and views.
And display any existing taping date in the episodes#show.
If none was created, link to the form to create one for this episode.

--- a/app/views/episodes/show.html.haml
+++ b/app/views/episodes/show.html.haml
@@ -1,5 +1,8 @@
 %h2 #{episode.title}
 
+%h3 Taping
+%p= episode.taping.try(:date) || link_to("Set a taping date", new_episode_taping_path(episode))
+
 %h3 Description
 %p= episode.description
 
