Require user to sign in before viewing any of the things.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,10 @@
     %header
       %h1= link_to "Podpeople", root_path
 
-  .flashes
-    = flash[:notice]
-    = flash[:warning]
+    .flashes
+      %p= flash[:notice]
+      %p= flash[:warning]
+
     = render partial: '/shared/auth'
+    
     = yield
